--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,6 +1,6 @@
-title=Title
-appTitle = App Title
-appDescription=App Description
+title=Finance Posting
+appTitle = Finance Posting
+appDescription=Finance Posting
 
 table1HeaderText=ORIGINATING STANDARD DOCUMENT NUMBER INFORMATION
 table2HeaderText=SENDER INFORMATION
